# ot-harjoitustyo

./: .gitignore  README.md
harjoitustyo/: .coveragerc  .pylintrc  README.md  pyproject.toml  run.ps1  run.py  run.sh  run3.sh  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/harjoitustyo/: app.py  constant.py
harjoitustyo/harjoitustyo/engine/: marker.py  route.py  sql_object.py  stop.py  stop_time.py  trip.py
harjoitustyo/harjoitustyo/engine/data/: fetcher.py  importer.py  reader.py  zip_importer.py
harjoitustyo/harjoitustyo/tests/: constant_test.py
harjoitustyo/harjoitustyo/tests/engine/: marker_test.py  route_test.py  sql_object_test.py  stop_test.py  stop_time_test.py  trip_test.py
harjoitustyo/harjoitustyo/tests/engine/data/: fetcher_test.py  importer_test.py  reader_test.py
harjoitustyo/harjoitustyo/ui/: ui.py
harjoitustyo/harjoitustyo/ui/control/: control.py  map_buttons.py  stop_container.py  stop_info.py  stop_times_info.py
harjoitustyo/harjoitustyo/ui/handler/: handler.py
harjoitustyo/harjoitustyo/ui/map/: map.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: coverage.ps1  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc  coverage.ps1
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
